[package]
name = "hilbert-wasm-renderer"
version = "0.1.0"
authors = ["benjaminwgordon <benjaminwillardgordon@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
wasm-bindgen = "0.2.63"
console_error_panic_hook = { version = "0.1.6", optional = true }
wee_alloc = { version = "0.4.5", optional = true }
js-sys = "0.3.61"
web-sys = { version = "0.3.61", features = ["console"] }
hilbert_curve_generator = {path="../hilbert-curve-generator", version="0.1.0"}
wasm-bindgen-test = "0.3.13"

[profile.release]
opt-level = "z"
overflow-checks = true
debug = 0
strip = "symbols"
debug-assertions = false
panic = "abort"
codegen-units = 1
lto = true

[profile.dev]
opt-level = 0
panic = 'abort'

[package.metadata.wasm-pack.profile.release]
wasm-opt = false
